--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
 	},
 	"dependencies": {
 		"axios": "^0.17.1",
+		"qs": "^6.5.1",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
 		"react-native-elements": "^0.18.2",
 		"react-native-vector-icons": "^4.4.2",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^5.4.0",
+		"redux-thunk": "^2.2.0",
 		"xmldom": "^0.1.27"
 	},
 	"devDependencies": {
